force-app/main/default/objects/Questionnaire__c/Questionnaire__c.object-meta.xml
<CustomObject>
    <label>アンケート</label>
    <nameField>
        <displayFormat>QU-{000000}</displayFormat>
        <label>アンケート名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>