force-app/main/default/objects/Questionnaire__c/fields/AgencyDecisionReasonOther__c.field-meta.xml
<CustomField>
    <fullName>AgencyDecisionReasonOther__c</fullName>
    <label>仲介不動産会社決定理由(その他)</label>
    <type>TextArea</type>
</CustomField>