force-app/main/default/objects/Questionnaire__c/fields/AnswerStatus__c.field-meta.xml
<CustomField>
    <fullName>AnswerStatus__c</fullName>
    <label>回答状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未回答</fullName>
                <default>true</default>
                <label>未回答</label>
            </value>
            <value>
                <fullName>回答済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>