force-app/main/default/objects/Questionnaire__c/fields/IsIntroduction__c.field-meta.xml
<CustomField>
    <fullName>IsIntroduction__c</fullName>
    <label>紹介有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>紹介を受けた</fullName>
            </value>
            <value>
                <fullName>紹介を受けなかった</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>