force-app/main/default/objects/Questionnaire__c/fields/MediationCompanyHousingRegulations__c.field-meta.xml
<CustomField>
    <fullName>MediationCompanyHousingRegulations__c</fullName>
    <label>社宅の規定を踏まえた物件紹介を受けることができた</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>とてもそう思う</fullName>
            </value>
            <value>
                <fullName>そう思う</fullName>
            </value>
            <value>
                <fullName>どちらともいえない</fullName>
            </value>
            <value>
                <fullName>そう思わない</fullName>
            </value>
            <value>
                <fullName>とてもそう思わない</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>