force-app/main/default/objects/Questionnaire__c/fields/MediationExplanation__c.field-meta.xml
<CustomField>
    <fullName>MediationExplanation__c</fullName>
    <label>不動産会社から周辺環境の説明を受けることができた</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>とてもそう思う</fullName>
            </value>
            <value>
                <fullName>そう思う</fullName>
            </value>
            <value>
                <fullName>どちらともいえない</fullName>
            </value>
            <value>
                <fullName>そう思わない</fullName>
            </value>
            <value>
                <fullName>とてもそう思わない</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>