force-app/main/default/objects/Questionnaire__c/fields/MediationPeaceOfMind__c.field-meta.xml
<CustomField>
    <fullName>MediationPeaceOfMind__c</fullName>
    <label>会社からの紹介先だと安⼼感がある</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>とてもそう思う</fullName>
            </value>
            <value>
                <fullName>そう思う</fullName>
            </value>
            <value>
                <fullName>どちらともいえない</fullName>
            </value>
            <value>
                <fullName>そう思わない</fullName>
            </value>
            <value>
                <fullName>とてもそう思わない</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>