force-app/main/default/objects/Questionnaire__c/fields/MediationProcedure__c.field-meta.xml
<CustomField>
    <fullName>MediationProcedure__c</fullName>
    <label>物件を決定してからの会社との⼿続きがスムーズにできた</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>とてもそう思う</fullName>
            </value>
            <value>
                <fullName>そう思う</fullName>
            </value>
            <value>
                <fullName>どちらともいえない</fullName>
            </value>
            <value>
                <fullName>そう思わない</fullName>
            </value>
            <value>
                <fullName>とてもそう思わない</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>