force-app/main/default/objects/Questionnaire__c/fields/MoveReason__c.field-meta.xml
<CustomField>
    <fullName>MoveReason__c</fullName>
    <label>転居理由</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>転勤</fullName>
            </value>
            <value>
                <fullName>社有・寮等の閉鎖</fullName>
            </value>
            <value>
                <fullName>自己都合</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>