force-app/main/default/objects/Questionnaire__c/fields/MoveReasonOther__c.field-meta.xml
<CustomField>
    <fullName>MoveReasonOther__c</fullName>
    <label>転居理由(その他)</label>
    <type>TextArea</type>
</CustomField>