force-app/main/default/objects/Questionnaire__c/fields/MovingCompanyPrice__c.field-meta.xml
<CustomField>
    <fullName>MovingCompanyPrice__c</fullName>
    <label>引越会社の価格</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>とても高い</fullName>
            </value>
            <value>
                <fullName>高い</fullName>
            </value>
            <value>
                <fullName>適切</fullName>
            </value>
            <value>
                <fullName>安い</fullName>
            </value>
            <value>
                <fullName>とても安い</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>