force-app/main/default/objects/Questionnaire__c/fields/MovingCompanyServiceQuality__c.field-meta.xml
<CustomField>
    <fullName>MovingCompanyServiceQuality__c</fullName>
    <label>引越会社のサービスの品質</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>とても良い</fullName>
            </value>
            <value>
                <fullName>良い</fullName>
            </value>
            <value>
                <fullName>どちらともいえない</fullName>
            </value>
            <value>
                <fullName>あまり良くない</fullName>
            </value>
            <value>
                <fullName>良くない</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>