force-app/main/default/objects/Questionnaire__c/fields/MovingServiceOpinionAndRequest__c.field-meta.xml
<CustomField>
    <fullName>MovingServiceOpinionAndRequest__c</fullName>
    <label>引越し⼿続やサービスについての意⾒・要望</label>
    <type>TextArea</type>
</CustomField>