force-app/main/default/objects/Questionnaire__c/fields/OperatorCorrespondenceName__c.field-meta.xml
<CustomField>
    <fullName>OperatorCorrespondenceName__c</fullName>
    <label>対応したオペレーター名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>