force-app/main/default/objects/Questionnaire__c/fields/OperatorCorrespondenceNotGoodPointOther__c.field-meta.xml
<CustomField>
    <fullName>OperatorCorrespondenceNotGoodPointOther__c</fullName>
    <label>オペレーターの対応、サービスで悪かったところ(その他)</label>
    <type>TextArea</type>
</CustomField>