force-app/main/default/objects/Questionnaire__c/fields/RequestService__c.field-meta.xml
<CustomField>
    <fullName>RequestService__c</fullName>
    <label>あればいいなと思ったサービス</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>内⾒時等の送迎</fullName>
            </value>
            <value>
                <fullName>学校区や地域情報の紹介</fullName>
            </value>
            <value>
                <fullName>オンライン対応（内⾒、接客）</fullName>
            </value>
            <value>
                <fullName>電気、ガス等の取り次ぎサービス</fullName>
            </value>
            <value>
                <fullName>WiFI、ネット環境等の⼿続き代⾏</fullName>
            </value>
            <value>
                <fullName>家具・家電の⼿配</fullName>
            </value>
            <value>
                <fullName>不⽤品の処分</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>