force-app/main/default/objects/Questionnaire__c/fields/ServiceNextTimeNotUsedReson__c.field-meta.xml
<CustomField>
    <fullName>ServiceNextTimeNotUsedReson__c</fullName>
    <label>⽇本社宅ネット次回不利用理由</label>
    <type>TextArea</type>
</CustomField>