force-app/main/default/objects/Questionnaire__c/fields/ServiceUseFrequency__c.field-meta.xml
<CustomField>
    <fullName>ServiceUseFrequency__c</fullName>
    <label>⽇本社宅ネット利用回数</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>今回が初めて</fullName>
            </value>
            <value>
                <fullName>1回</fullName>
            </value>
            <value>
                <fullName>2回</fullName>
            </value>
            <value>
                <fullName>3回</fullName>
            </value>
            <value>
                <fullName>4回以上</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>