force-app/main/default/objects/Questionnaire__c/fields/UseMovingCompanyOther__c.field-meta.xml
<CustomField>
    <fullName>UseMovingCompanyOther__c</fullName>
    <label>利用した引越会社(その他)</label>
    <type>TextArea</type>
</CustomField>